--- a/app/src/main/res/layout/activity_manage_gameplay.xml
+++ b/app/src/main/res/layout/activity_manage_gameplay.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_manage_gameplay"
     android:layout_width="match_parent"
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.seniordesign.wolfpack.quizinator.Activities.ManageGameplayActivity">
 
     <Button
@@ -15,10 +16,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="sendCard"/>
+
     <Button
         android:text="@string/end_game"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="endGame"/>
 
-</RelativeLayout>
+</LinearLayout>
