--- a/app/src/main/res/layout/activity_new_game_settings.xml
+++ b/app/src/main/res/layout/activity_new_game_settings.xml
@@ -64,7 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/card_type"/>
-            <Spinner
+            <io.apptik.widget.multiselectspinner.MultiSelectSpinner
                 android:id="@+id/card_type_spinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
