--- a/app/src/main/res/layout/activity_card_creation.xml
+++ b/app/src/main/res/layout/activity_card_creation.xml
@@ -11,23 +11,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <Spinner
             android:id="@+id/card_type_filter_spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
-        </Spinner>
-        <Spinner
-            android:id="@+id/moderator_needed_filter_spinner"
+            android:layout_weight="1"
+            android:paddingRight="5dp"
+            android:entries="@array/card_creation_type_array" />
+        <CheckBox
+            android:id="@+id/moderator_needed_filter_checkbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
-        </Spinner>
+            android:layout_weight="1"
+            android:button="@null"
+            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
+            android:text="@string/moderator_needed_filter" />
+        <!--<Spinner-->
+            <!--android:id="@+id/moderator_needed_filter_spinner"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1"-->
+            <!--android:entries="@array/moderator_needed_array" />-->
     </LinearLayout>
     <ListView
         android:id="@+id/list_of_cards"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </ListView>
-
+        android:layout_height="wrap_content" />
 </LinearLayout>
