--- a/app/src/main/res/layout/activity_host_game.xml
+++ b/app/src/main/res/layout/activity_host_game.xml
@@ -11,21 +11,29 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.seniordesign.wolfpack.quizinator.Activities.HostGameActivity">
 
-    <Button
-        android:id="@+id/start_game_settings"
+    <LinearLayout
+        android:id="@+id/buttonsPanel"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/host_game_game_settings"
-        android:onClick="startGameSettingsActivity" >
-    </Button>
+        >
 
-    <Button
-        android:id="@+id/btn_disconnect_all"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_disconnect_all"
-        android:onClick="disconnectAllPeersForTheHostPlayer" >
-    </Button>
+        <Button
+            android:id="@+id/btn_disconnect_all"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_disconnect_all"
+            android:onClick="disconnectAllPeersForTheHostPlayer" />
+
+        <Button
+            android:id="@+id/start_game_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/host_game_game_settings"
+            android:onClick="startGameSettingsActivity" />
+
+    </LinearLayout>
 
     <fragment
         class="com.seniordesign.wolfpack.quizinator.Fragments.PeerListFragment"
