--- a/app/src/main/res/layout/activity_decks.xml
+++ b/app/src/main/res/layout/activity_decks.xml
@@ -14,7 +14,8 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/new_deck"/>
+            android:text="@string/new_deck"
+            android:onClick="newDeckClick"/>
     </LinearLayout>
     
     <ListView
