--- a/app/src/main/res/layout/activity_edit_deck.xml
+++ b/app/src/main/res/layout/activity_edit_deck.xml
@@ -67,7 +67,8 @@
         <Button
             android:text="@string/Delete"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:onClick="onDeleteClick"/>
         <Button
             android:text="@string/save"
             android:layout_width="wrap_content"
