--- a/app/src/main/res/layout/content_navigation_drawer.xml
+++ b/app/src/main/res/layout/content_navigation_drawer.xml
@@ -13,17 +13,17 @@
     tools:context="com.seniordesign.wolfpack.quizinator.Activities.MainMenuActivity"
     tools:showIn="@layout/app_bar_navigation_drawer">
 
-    <TextView
+
+    <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textStyle="bold"
-        android:textSize="32sp"
-        android:id="@+id/title"
-        android:layout_centerHorizontal="true" />
+        android:layout_height="70dp"
+        android:paddingBottom="10dp"
+        android:src="@drawable/quizinatortitle"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/title" />
     <LinearLayout
         android:id="@+id/mainMenuButtons"
-        android:layout_below="@id/title"
+        android:layout_below="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
