--- a/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -7,17 +7,16 @@
             android:title="@string/quiz_bowl_rules" />
         <item
             android:id="@+id/nav_P2P_compatibility_check"
-            android:title="Check P2P Compatibility"
+            android:title="@string/nav_bar_check_p2p_compliance"
             />
         <item
             android:id="@+id/nav_show_decks"
-            android:title="View and Edit Decks"
+            android:title="@string/nav_bar_edit_decks"
             />
-    <!--
         <item
-            android:id="@+id/nav_application_settings"
-            android:title="Application Settings" />
-    -->
+            android:id="@+id/nav_show_cards"
+            android:title="@string/nav_bar_edit_cards"
+            />
     </group>
 
 </menu>
