--- a/app/src/main/res/layout/activity_edit_deck.xml
+++ b/app/src/main/res/layout/activity_edit_deck.xml
@@ -56,6 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp">
         <Button
+            android:id="@+id/deck_save_button"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
@@ -65,6 +66,7 @@
             android:layout_height="40dp"
             android:onClick="onSaveClick"/>
         <Button
+            android:id="@+id/deck_cancel_button"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"
@@ -74,6 +76,7 @@
             android:layout_height="40dp"
             android:onClick="onCancelClick"/>
         <Button
+            android:id="@+id/deck_delete_button"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
             android:layout_margin="10dp"
