--- a/app/src/main/res/layout/fragment_edit_card.xml
+++ b/app/src/main/res/layout/fragment_edit_card.xml
@@ -100,6 +100,7 @@
                 android:visibility="gone"
                 >
                 <RadioGroup
+                    android:id="@+id/edit_card_true_or_false"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
                     >
@@ -113,7 +114,7 @@
                         android:layout_height="match_parent"
                         android:text="@string/_false"
                         />
-                </RadioGroup>>
+                </RadioGroup>
             </LinearLayout>
         </TableRow>
     </TableLayout>
@@ -123,5 +124,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:onClick="onSaveButtonClicked"
         />
 </LinearLayout>
