--- a/app/src/main/res/layout/fragment_edit_card.xml
+++ b/app/src/main/res/layout/fragment_edit_card.xml
@@ -1,129 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<TableLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:stretchColumns="1"
+    android:id="@+id/edit_card_top_level">
 
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:stretchColumns="1">
+    <TableRow>
+        <TextView
+            android:layout_column="0"
+            android:text="@string/type"
+            android:padding="3dip"
+            android:gravity="right"
+            android:layout_width="wrap_content" />
+        <Spinner
+            android:id="@+id/edit_card_card_type_spinner"
+            android:layout_column="1"
+            android:gravity="center"
+            android:padding="3dip"
+            />
+    </TableRow>
 
-        <TableRow>
-            <TextView
-                android:layout_column="0"
-                android:text="@string/type"
-                android:padding="3dip"
-                android:gravity="right"
-                android:layout_width="wrap_content" />
-            <Spinner
-                android:id="@+id/edit_card_card_type_spinner"
-                android:layout_column="1"
-                android:gravity="center"
-                android:padding="3dip"
-                />
-        </TableRow>
+    <TableRow>
+        <TextView
+            android:layout_column="0"
+            android:text="@string/points"
+            android:padding="3dip"
+            android:gravity="right"
+            android:layout_width="wrap_content" />
+        <EditText
+            android:id="@+id/edit_card_points_value"
+            android:layout_column="1"
+            android:gravity="center"
+            android:padding="3dip" />
+    </TableRow>
 
-        <TableRow>
-            <TextView
-                android:layout_column="0"
-                android:text="@string/points"
-                android:padding="3dip"
-                android:gravity="right"
-                android:layout_width="wrap_content" />
+    <TableRow>
+        <TextView
+            android:layout_column="0"
+            android:text="@string/question"
+            android:padding="3dip"
+            android:gravity="right"
+            android:layout_width="wrap_content" />
+        <EditText
+            android:id="@+id/edit_card_question_value"
+            android:layout_column="1"
+            android:gravity="center"
+            android:padding="3dip" />
+    </TableRow>
+
+    <TableRow>
+        <TextView
+            android:layout_column="0"
+            android:text="@string/answer"
+            android:padding="3dip"
+            android:gravity="right"
+            android:layout_width="wrap_content" />
+        <LinearLayout
+            android:id="@+id/edit_card_answer_layout_1"
+            android:orientation="vertical"
+            android:layout_column="1"
+            >
             <EditText
-                android:id="@+id/edit_card_points_value"
-                android:layout_column="1"
+                android:id="@+id/edit_card_answer_field_1"
                 android:gravity="center"
-                android:padding="3dip" />
-        </TableRow>
-
-        <TableRow>
-            <TextView
-                android:layout_column="0"
-                android:text="@string/question"
                 android:padding="3dip"
-                android:gravity="right"
-                android:layout_width="wrap_content" />
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent" />
             <EditText
-                android:id="@+id/edit_card_question_value"
-                android:layout_column="1"
+                android:id="@+id/edit_card_answer_field_2"
                 android:gravity="center"
-                android:padding="3dip" />
-        </TableRow>
-
-        <TableRow>
-            <TextView
-                android:layout_column="0"
-                android:text="@string/answer"
                 android:padding="3dip"
-                android:gravity="right"
-                android:layout_width="wrap_content" />
-            <LinearLayout
-                android:id="@+id/edit_card_answer_layout_1"
-                android:orientation="vertical"
-                android:layout_column="1"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone" />
+            <EditText
+                android:id="@+id/edit_card_answer_field_3"
+                android:gravity="center"
+                android:padding="3dip"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone" />
+            <EditText
+                android:id="@+id/edit_card_answer_field_4"
+                android:gravity="center"
+                android:padding="3dip"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone" />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/edit_card_answer_layout_2"
+            android:orientation="vertical"
+            android:layout_column="1"
+            android:visibility="gone"
+            >
+            <RadioGroup
+                android:id="@+id/edit_card_true_or_false"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
                 >
-                <EditText
-                    android:id="@+id/edit_card_answer_field_1"
-                    android:gravity="center"
-                    android:padding="3dip"
-                    android:layout_width="fill_parent"
-                    android:layout_height="match_parent" />
-                <EditText
-                    android:id="@+id/edit_card_answer_field_2"
-                    android:gravity="center"
-                    android:padding="3dip"
+                <RadioButton
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:visibility="gone" />
-                <EditText
-                    android:id="@+id/edit_card_answer_field_3"
-                    android:gravity="center"
-                    android:padding="3dip"
+                    android:text="@string/_true"
+                    />
+                <RadioButton
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:visibility="gone" />
-                <EditText
-                    android:id="@+id/edit_card_answer_field_4"
-                    android:gravity="center"
-                    android:padding="3dip"
-                    android:layout_width="fill_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="gone" />
-            </LinearLayout>
-            <LinearLayout
-                android:id="@+id/edit_card_answer_layout_2"
-                android:orientation="vertical"
-                android:layout_column="1"
-                android:visibility="gone"
-                >
-                <RadioGroup
-                    android:id="@+id/edit_card_true_or_false"
-                    android:layout_width="fill_parent"
-                    android:layout_height="match_parent"
-                    >
-                    <RadioButton
-                        android:layout_width="fill_parent"
-                        android:layout_height="match_parent"
-                        android:text="@string/_true"
-                        />
-                    <RadioButton
-                        android:layout_width="fill_parent"
-                        android:layout_height="match_parent"
-                        android:text="@string/_false"
-                        />
-                </RadioGroup>
-            </LinearLayout>
-        </TableRow>
-    </TableLayout>
-
-    <Button
-        android:text="@string/save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:onClick="onSaveButtonClicked"
-        />
-</LinearLayout>
+                    android:text="@string/_false"
+                    />
+            </RadioGroup>
+        </LinearLayout>
+    </TableRow>
+</TableLayout>
