--- a/app/src/main/res/layout/fragment_edit_card.xml
+++ b/app/src/main/res/layout/fragment_edit_card.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:stretchColumns="1"
+    android:padding="10dp"
     android:id="@+id/edit_card_top_level">
 
     <TableRow>
@@ -32,7 +33,7 @@
         <EditText
             android:id="@+id/edit_card_points_value"
             android:layout_column="1"
-            android:gravity="center"
+            android:gravity="start"
                 android:padding="3dip"
                 android:inputType="number"/>
     </TableRow>
@@ -50,7 +51,7 @@
         <EditText
             android:id="@+id/edit_card_question_value"
             android:layout_column="1"
-            android:gravity="center"
+            android:gravity="start"
             android:padding="3dip" />
     </TableRow>
 
@@ -68,27 +69,27 @@
             >
             <EditText
                 android:id="@+id/edit_card_answer_field_1"
-                android:gravity="center"
+                android:gravity="start"
                 android:padding="3dip"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent" />
             <EditText
                 android:id="@+id/edit_card_answer_field_2"
-                android:gravity="center"
+                android:gravity="start"
                 android:padding="3dip"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:visibility="gone" />
             <EditText
                 android:id="@+id/edit_card_answer_field_3"
-                android:gravity="center"
+                android:gravity="start"
                 android:padding="3dip"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:visibility="gone" />
             <EditText
                 android:id="@+id/edit_card_answer_field_4"
-                android:gravity="center"
+                android:gravity="start"
                 android:padding="3dip"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
