--- a/app/src/main/res/layout/activity_manage_gameplay.xml
+++ b/app/src/main/res/layout/activity_manage_gameplay.xml
@@ -4,14 +4,36 @@
     android:id="@+id/activity_manage_gameplay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context="com.seniordesign.wolfpack.quizinator.Activities.ManageGameplayActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:id="@+id/gamePlayTimeHostText"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:textColor="@android:color/white"
+                android:paddingRight="10dp"
+                android:textSize="20dp"
+                android:text="Game Time: 00:00"
+                />
+        </RelativeLayout>
+    </android.support.v7.widget.Toolbar>
+
     <Button
+        android:id="@+id/send_card"
         android:text="@string/send_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,8 +44,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="endGame"/>
+
     <TextView
-        android:id="@+id/gamePlayTimeHostText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/next_card"/>
+
+    <Spinner
+        android:id="@+id/next_card_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/shuffle"
+        android:onClick="shuffle"
+        android:text="@string/shuffle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
