--- a/app/src/main/res/layout/activity_edit_deck.xml
+++ b/app/src/main/res/layout/activity_edit_deck.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_edit_deck"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.seniordesign.wolfpack.quizinator.Activities.EditDeckActivity">
+              xmlns:tools="http://schemas.android.com/tools"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:id="@+id/activity_edit_deck"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              tools:context="com.seniordesign.wolfpack.quizinator.Activities.EditDeckActivity">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -55,32 +56,32 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="60dp">
-        <Button
+        <ImageButton
             android:id="@+id/deck_save_button"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:background="@drawable/save_button"
+            app:srcCompat="@drawable/ic_plus_btn_24dp"
             android:layout_margin="10dp"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:onClick="onSaveClick"/>
-        <Button
+        <ImageButton
             android:id="@+id/deck_cancel_button"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"
             android:layout_margin="10dp"
-            android:background="@drawable/cancel_button"
+            app:srcCompat="@drawable/ic_cancel_cross_24dp"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:onClick="onCancelClick"/>
-        <Button
+        <ImageButton
             android:id="@+id/deck_delete_button"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
             android:layout_margin="10dp"
-            android:background="@drawable/remove_item_button"
+            app:srcCompat="@drawable/ic_remove_btn_24dp"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:onClick="onDeleteClick"/>
