--- a/app/src/main/res/layout/array_adapter_list_of_cards.xml
+++ b/app/src/main/res/layout/array_adapter_list_of_cards.xml
@@ -13,7 +13,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingRight="50dp"
         android:layout_weight="1"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:text="@string/question"
         android:textSize="12sp"
         android:id="@+id/array_adapter_card_question" />
